# Rustfmt-User-Config-Database

./: Cargo.toml
.cargo/: config.toml
migrations/: 2024-04-02-track_repository_clones.sql  init_tables_2024-03-31.sql
src/: database.rs  git.rs  github.rs  lib.rs  main.rs  rustfmt_toml.rs
src/cli/: commands.rs
src/database/: repository.rs  search.rs  store.rs
src/github/: graphql.rs  search.rs
