[package]
name = "rustfmt_user_config_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.77"
dotenv = "0.15.0"
reqwest = { version = "0.11.23", features = ["blocking", "json"] }
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.108"
time = { version = "0.3.31", features = ["serde-well-known"] }
tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"]}
