[package]
name = "rustfmt_user_config_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.77"
clap = { version = "4.5.4", features = ["derive"] }
dotenv = "0.15.0"
git2 = "0.18.3"
reqwest = { version = "0.11.23", features = ["blocking", "json"] }
rust_search = "2.1.0"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "tls-native-tls", "postgres", "time", "macros"], default-features = false }
tempfile = "3.10.1"
time = { version = "0.3.31", features = ["serde-well-known"] }
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
toml = { version = "0.8.12", default-features = false, features = ["parse"] }
tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"]}
